--- a/Android/app/src/main/res/layout/ripple_widget.xml
+++ b/Android/app/src/main/res/layout/ripple_widget.xml
@@ -8,13 +8,12 @@
         android:id="@+id/ly_container"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@drawable/round_frame"
-        >
+        android:background="@drawable/round_frame">
 
         <ImageView
             android:id="@+id/img_logo"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
             android:background="@drawable/logo" />
@@ -23,26 +22,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/img_logo"
             android:text="Your Searches Fight Hunger..."
             android:textSize="15dp" />
-        <ImageView
-            android:id="@+id/img_search"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/ic_search"
+
+        <ImageButton
+            android:id="@+id/btn_mic"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
             android:layout_marginRight="5dp"
-            android:layout_centerVertical="true"
-            />
-        <ImageView
-            android:id="@+id/img_mic"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/ic_mic"
-            android:layout_toLeftOf="@+id/img_search"
-            android:layout_centerVertical="true"
-            />
+            android:background="@drawable/ic_mic" />
     </RelativeLayout>
 </RelativeLayout>
