--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
-    android:orientation="vertical"
-    android:padding="20dp"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="How to setup the widget \non your device"
-        android:textSize="30dp"
-        android:textAlignment="center"
-        android:layout_gravity="center"
-        android:textStyle="bold"
-        android:textColor="@android:color/secondary_text_light"
-        />
-    <TextView
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/setup_guide"
-        android:layout_marginTop="20dp"
-        android:textAlignment="textStart"
-        android:textSize="17dp"
-        android:textColor="@android:color/secondary_text_light"
-        />
-    <CheckBox
-        android:id="@+id/chkBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Do you want to stop this notice from showing?"
-        android:layout_marginTop="20dp"
-        android:textColor="@android:color/secondary_text_light"
-        android:layout_gravity="center"
-        />
-    <Button
-        android:id="@+id/btn_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="I got it"
-        android:layout_gravity="center"
-        />
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/logo_background" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="20dp"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="@string/setup_guide1"
+                android:textSize="17dp"
+                android:textColor="@android:color/secondary_text_light"
+                />
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:background="@drawable/guide3"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center"
+                />
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:background="@drawable/guide1"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center"
+                />
+            <ImageView
+                android:layout_width="300dp"
+                android:layout_height="150dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/guide2"
+                android:layout_gravity="center"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/setup_guide2"
+                android:layout_marginTop="20dp"
+                android:textAlignment="textStart"
+                android:textSize="17dp"
+                android:textColor="@android:color/secondary_text_light"
+                />
+            <CheckBox
+                android:id="@+id/chkBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Do you want to stop this notice from showing?"
+                android:layout_marginTop="20dp"
+                android:textColor="@android:color/secondary_text_light"
+                android:layout_gravity="center"
+                />
+            <Button
+                android:id="@+id/btn_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="50dp"
+                android:text="I got it"
+                android:layout_gravity="center"
+                />
+        </LinearLayout>
+    </ScrollView>
+</RelativeLayout>
