--- a/Android/app/src/main/res/layout/activity_search.xml
+++ b/Android/app/src/main/res/layout/activity_search.xml
@@ -4,14 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
-    android:padding="10dp"
     tools:context=".SearchActivity">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/logo_background"
+        android:scaleType="centerCrop"
+        />
     <RelativeLayout
         android:id="@+id/ly_container"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/round_frame"
+        android:layout_margin="10dp"
         >
 
         <ImageView
@@ -36,15 +41,15 @@
             android:imeOptions="actionSearch"
             android:singleLine="true"
             android:textSize="17dp" />
-        <Button
+
+        <ImageButton
             android:id="@+id/btn_search"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/ic_search"
             android:layout_alignParentEnd="true"
-            android:layout_marginRight="5dp"
             android:layout_centerVertical="true"
-            />
+            android:layout_marginRight="5dp"
+            android:background="@drawable/ic_search" />
 
         <ImageButton
             android:id="@+id/btn_mic"
@@ -61,5 +66,42 @@
             android:layout_toLeftOf="@+id/btn_search"
             android:visibility="invisible"
             android:background="@drawable/ic_cancel" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:layout_above="@+id/ly_bottom"
+        android:background="@drawable/gradient_line" />
+    <RelativeLayout
+        android:id="@+id/ly_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_alignParentBottom="true"
+        >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#ffffff" />
+
+        <TextView
+            android:id="@+id/txt_logo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="RippleSearch"
+            android:textAlignment="center"
+            android:textSize="25dp"
+            android:textStyle="bold" />
+
+        <ImageButton
+            android:id="@+id/btn_search_big"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_below="@+id/txt_logo"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/search_circle" />
     </RelativeLayout>
 </RelativeLayout>
