--- a/Android/app/src/main/res/layout/mic_popup.xml
+++ b/Android/app/src/main/res/layout/mic_popup.xml
@@ -21,46 +21,41 @@
                 android:id="@+id/txt_logo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Ripple Speech"
+                android:text="RippleSearch"
                 android:textSize="30dp"
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:visibility="visible"
                 />
-            <ImageButton
-                android:id="@+id/btn_search"
-                android:layout_marginLeft="20dp"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="@drawable/ic_search"
-                android:visibility="gone"
-                />
-            <TextView
-                android:id="@+id/txt_query"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="hello"
-                android:layout_marginLeft="10dp"
-                android:textColor="@color/black"
-                android:textSize="18dp"
-                android:visibility="gone"
-                />
         </LinearLayout>
-        <ImageButton
-            android:id="@+id/btn_mic"
+        <RelativeLayout
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:background="@drawable/ic_mic_circle"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            />
+            >
+            <ImageButton
+                android:id="@+id/btn_mic"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:background="@drawable/ic_mic_circle"
+                />
+            <ImageView
+                android:id="@+id/img_mic"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:background="@drawable/loading"
+                android:visibility="gone"
+                />
+        </RelativeLayout>
         <TextView
+            android:id="@+id/txt_query"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Try saying Something"
             android:textAlignment="center"
-            android:textSize="20dp"
+            android:textSize="17dp"
             />
         <TextView
             android:layout_width="match_parent"
